...
                            .foregroundColor(Color.AppColors.ThemeNavy)
                            .frame(width: 32, height: 32)
                            .background(Color(.systemGray6))
                            .clipShape(Circle())
                    }
                    .buttonStyle(PlainButtonStyle())
                    .accessibilityIdentifier("EditPayrollButton")
                    
                    Button {
                        onDelete?(detail)
                    } label: {
                        Image(systemName: "trash")
                            .fontCustom(size: 13, weight: .regular)
                            .foregroundColor(Color.AppColors.ThemeRed)
                            .frame(width: 32, height: 32)
                            .background(Color(.systemGray6))
                            .clipShape(Circle())
                    }
                    .buttonStyle(PlainButtonStyle())
                    .accessibilityIdentifier("DeletePayrollButton")
                    
                }
                
                VStack(alignment: .leading, spacing: 5) {
                    Text("EMPLOYEE COUNT")
                        .fontCustom(size: 11, weight: .bold)
...
